
Changelog from dmraid 1.0.0.rc11 to 1.0.0.rc12		2006.09.22


FIXES:
------
o sil.c: quorate() OBO fix
o activate.c: handler() OBO fix
o added log_zero_sectors() to various metadata format handlers

FEATURES:
---------
o added SNIA DDF1 support (IBM)
o added reload functionality to devmapper.c (IBM)
o sil.[ch]: added JBOD support


MISCELANIOUS:
-------------
o streamlined devmapper.c



Changelog from dmraid 1.0.0.rc10 to 1.0.0.rc11		2006.05.16

FIXES:
------
o jm.c:	checksum() calculation

o misc.c:
	support "%d" in p_fmt and fix segfault with wrong format identifier

o nv.c:	size fix in setup_rd()

o activate.c:
	- striped devices could end on non-chunk boundaries
	- calc_region_size() calculated too small sizes causing large
	  dirty logs in memory

o isw.c: set raid5 type to left asymmetric

o toollib.c: fixed 'No RAID...' message


FEATURES:
---------

o support selection of RAID5 allocation algorithm in metadata format handlers


MISCELANIOUS:
-------------



Changelog from dmraid 1.0.0.rc9 to 1.0.0.rc10		2006.02.17

FIXES:
------
o metadata.c: want_set() didn't drop sets properly
              (eg, jmicron_raid10 wanted and jmicron_raid1 not dropped)

o scsi.c: avoid retrieving too much data (Al Viro)

o sil.h: magic number fix (some arrays were not recognized)


FEATURES:
---------
o added libdmraid_make_table() to activate.c to be used by installer

o asr.[ch]: added Adaptec HostRAID support

o jm.[ch]: added JMicron JMB36x support

o added '--enable-libselinux' to configure for those who want
  to build without it

o bytorder.h: enhanced to support big endian conversion
              on little endian arch

o nv.c: support RAID5 with dm-raid45 target

o pdc.h: support additional metadata offset

o metadata.c: enhanced to support RAID4 and RAID5 mappings with dm-raid45 target


MISCELANIOUS:
-------------
o misc.c: streamlined remove_white_space() (Al Viro)



Changelog from dmraid 1.0.0.rc8 to 1.0.0.rc9		2005.09.23

FIXES:
------