@@ -1,12 +1,12 @@
 #ifndef	DMRAID_LIB_VERSION
 
-#define	DMRAID_LIB_VERSION		"1.0.0.rc12"
+#define	DMRAID_LIB_VERSION		"1.0.0.rc13"
 
 #define	DMRAID_LIB_MAJOR_VERSION	1
 #define	DMRAID_LIB_MINOR_VERSION	0
 #define	DMRAID_LIB_SUBMINOR_VERSION	0
-#define	DMRAID_LIB_VERSION_SUFFIX	"rc12"
+#define	DMRAID_LIB_VERSION_SUFFIX	"rc13"
 
-#define	DMRAID_LIB_DATE			"(2006.09.15)"
+#define	DMRAID_LIB_DATE			"(2006.10.11)"
 
 #endif
