@@ -1,1 +1,1 @@
-1.0.0.rc12 (2006.09.15)
+1.0.0.rc13 (2006.10.11)
