@@ -1,4 +1,14 @@
 
+Changelog from dmraid 1.0.0.rc12 to 1.0.0.rc13		2006.10.11
+
+
+FIXES:
+------
+o pdc.c: magic number check
+o metadata.c: rd_type() returned wrong unified_type for asr
+
+
+
 Changelog from dmraid 1.0.0.rc11 to 1.0.0.rc12		2006.09.22
 
 
@@ -18,6 +28,7 @@ o sil.[ch]: added JBOD support
 MISCELANIOUS:
 -------------
 o streamlined devmapper.c
+
 
 
 
